Omstrukturering av urler

--- a/src/pages/produkt/produkt-b.njk
+++ b/src/pages/produkt/produkt-b.njk
@@ -9,6 +9,7 @@ intro: 'Sikrer deg inntekt under fravær fra jobb når du må pleie og ta vare p
 published: 'Oppdatert 18. desember 2023'
 order: 4
 alpine: true
+permalink: 'produkt/b/index.html'
 ---
 {%- extends 'base.njk' -%}
 
