--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -3,17 +3,18 @@
 @tailwind utilities;
 
 @layer base {
-  /* @link https://utopia.fyi/type/calculator?c=320,18,1.125,1600,20,1.2,5,1,1280&s=0.75|0.5|0.25,1.5|2|3|4|6,xs-2xl|xs-m&g=xs,m,xl,12 */
-
+  
+  /* @link https://utopia.fyi/type/calculator?c=320,18,1.125,1200,20,1.2,5,1,1280&s=0.75|0.5|0.25,1.5|2|3|4|6,xs-2xl|xs-m&g=xs,m,xl,12 */
+  
   :root {
     --step--2: clamp(0.875rem, 0.875rem + 0vw, 0.875rem);
-    --step--1: clamp(1rem, 0.9895rem + 0.0523vw, 1.0419rem);
-    --step-0: clamp(1.125rem, 1.0938rem + 0.1563vw, 1.25rem);
-    --step-1: clamp(1.2656rem, 1.207rem + 0.293vw, 1.5rem);
-    --step-2: clamp(1.4238rem, 1.3297rem + 0.4703vw, 1.8rem);
-    --step-3: clamp(1.6019rem, 1.4623rem + 0.6977vw, 2.16rem);
-    --step-4: clamp(1.8019rem, 1.6044rem + 0.9875vw, 2.5919rem);
-    --step-5: clamp(2.0275rem, 1.7567rem + 1.3539vw, 3.1106rem);
+    --step--1: clamp(1rem, 0.9848rem + 0.0761vw, 1.0419rem);
+    --step-0: clamp(1.125rem, 1.0795rem + 0.2273vw, 1.25rem);
+    --step-1: clamp(1.2656rem, 1.1804rem + 0.4261vw, 1.5rem);
+    --step-2: clamp(1.4238rem, 1.2869rem + 0.6841vw, 1.8rem);
+    --step-3: clamp(1.6019rem, 1.3989rem + 1.0148vw, 2.16rem);
+    --step-4: clamp(1.8019rem, 1.5146rem + 1.4364vw, 2.5919rem);
+    --step-5: clamp(2.0275rem, 1.6336rem + 1.9693vw, 3.1106rem);
   }
 
   body {
@@ -30,6 +31,7 @@
     font-weight: 650;
   }
 }
+
 @layer components {
   :where(.prose) > *:not(summary) + * {
     margin-block-start: 1.5em;
@@ -52,32 +54,35 @@
   :where(.prose) :is(p, li) {
     @apply text-pretty;
   }
-  :where(.prose) a {
+  :where(.prose) > * a {
     @apply text-blue-600 underline;
   }
+  :where(.prose) > * a:hover {
+    @apply hover:no-underline;
+  }
 
-  :where(.toc) ol {
-    @apply mt-1 max-w-md grid gap-1;
+  .toc ol {
+    @apply mb-6 max-w-md grid gap-1;
   }
-  :where(.toc) li {
-    @apply py-1 relative;
+  .toc li {
+    @apply py-1.5 relative leading-snug;
   }
-  :where(.toc--sticky) li {
+  .toc--sticky li {
     @apply border-l-4 border-transparent px-3;
   }
-  :where(.toc--d) li {
+  .toc--d li {
     @apply -ml-3;
   }
-  :where(.toc) .active {
+  .toc .active {
     @apply lg:border-blue-600;
   }
-  :where(.toc) a {
+  .toc a {
     @apply hover:underline;
   }
-  :where(.toc) .active a {
+  .toc .active a {
     @apply lg:no-underline;
   }
-  :where(.toc) li a:before {
+  .toc li a:before {
     content: "";
     position: absolute;
     inset: 0;
@@ -100,7 +105,7 @@
     appearance: none;
     display: block;
     list-style: none;
-    padding: 10px 40px;
+    padding: 0.75em 40px;
     margin-block: -1px;
     margin-inline: -40px -12px;
     border-radius: 4px;
@@ -109,6 +114,7 @@
     text-indent: -30px;
     text-wrap: pretty;
     line-height: 1.375;
+    color: theme(colors.blue.800);
   }
   :where(.accordion) summary::-webkit-details-marker {
     display: none;
@@ -121,6 +127,7 @@
     background-color: theme(colors.blue.50);
   }
   :where(.accordion) summary:before {
+    background-color: theme(colors.blue.700);
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='18' height='18' viewBox='0 0 24 24' fill='none'%3E%3Cpath stroke='#fff' stroke-linecap='round' stroke-width='2' d='m6.5 10 5.493 5.493a.01.01 0 0 0 .014 0L17.5 10'/%3E%3C/svg%3E");
     background-position: center;
     background-repeat: no-repeat;
@@ -131,7 +138,6 @@
     translate: 0 4px;
     margin-inline-end: 8px;
     border-radius: 8px;
-    background-color: theme(colors.blue.500);
     transition: rotate 150ms;
     width: 20px;
     height: 20px;
@@ -145,10 +151,69 @@
   :where(.accordion) summary > * {
     text-wrap: pretty;
   }
-  /* :where(.accordion) summary:after {
-    content: " …" / "";
-    display: inline;
-  } */ 
+
+
+
+
+
+  .expander {
+    display: grid;
+    padding-inline: 40px;
+    background-color: theme(colors.slate.100);
+    border-radius: theme(borderRadius.md);
+  }
+  .expander[open] {
+    padding-block-end: 32px;
+  }
+  :where(.expander) summary {
+    appearance: none;
+    display: block;
+    list-style: none;
+    padding: 0.75em 40px;
+    margin-block: -1px;
+    margin-inline: -40px;
+    border-radius: theme(borderRadius.md);
+    cursor: pointer;
+    text-align: left;
+    text-indent: -26px;
+    text-wrap: pretty;
+    line-height: 1.375;
+    color: theme(colors.blue.700);
+    font-weight: 500;
+  }
+  :where(.expander) summary::-webkit-details-marker {
+    display: none;
+  }
+  :where(.expander[open]) summary {
+    background-color: theme(colors.slate.100);
+    margin-block-end: 12px;
+  }
+  :where(.expander) summary:hover {
+    background-color: theme(colors.slate.200/20);
+  }
+  :where(.expander) summary:before {
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none'%3E%3Cpath stroke='rgba(0, 69, 156, 1)' stroke-linecap='round' stroke-width='2' d='m6.5 10 5.493 5.493a.01.01 0 0 0 .014 0L17.5 10'/%3E%3C/svg%3E");
+    background-position: center;
+    background-repeat: no-repeat;
+    content: "";
+    display: inline-block;
+    flex-shrink: 0;
+    place-items: center;
+    translate: 0 4px;
+    margin-inline-end: 8px;
+    transition: rotate 150ms;
+    width: 20px;
+    height: 20px;
+  }
+  :where(.expander[open]) summary:before {
+    rotate: -180deg;
+  }
+  :where(.expander) summary > * {
+    text-wrap: pretty;
+  }
+
+
+
 
 
   .button {
@@ -167,18 +232,28 @@
     margin: 0;
   }
   .button--primary {
-    background-color: theme(colors.white);
+    background-color: theme(colors.blue.500);
+    color: theme(colors.white);
   }
   .button--primary:hover {
     border-color: theme(colors.blue.600);
-    background-color: theme(colors.slate.200);
+    background-color: theme(colors.blue.600);
   }
   .button--secondary {
-    border-color: theme(colors.white);
-    background-color: theme(colors.slate.100);
+    border-color: theme(colors.blue.500);
+    background-color: theme(colors.white);
   }
   .button--secondary:hover {
-    background-color: theme(colors.slate.200);
+    border-color: theme(colors.blue.600);
+    background-color: theme(colors.blue.50);
+  }
+  .button--tertiary {
+    border-color: theme(colors.blue.50);
+    background-color: theme(colors.blue.50);
+  }
+  .button--tertiary:hover {
+    background-color: theme(colors.blue.100);
+    border-color: theme(colors.blue.100);
   }
 
 }
@@ -187,16 +262,16 @@
   .grid-cols-mini {
     --_edge: clamp(0.75rem, -1.4286rem + 10.8929vw, 16rem);
     grid-template-columns: 
-      [full-start] var(--_edge) minmax(0, 1fr) [wide-start main-start side-start] minmax(0, 38rem) [main-end side-end wide-end] minmax(0, 1fr) var(--_edge) [full-end];
+      [full-start] var(--_edge) minmax(0, 1fr) [wide-start] minmax(0, 1fr) [main-start side-start] minmax(0, 40rem) [main-end side-end] minmax(0, 1fr) [wide-end] minmax(0, 1fr) var(--_edge) [full-end];
   }
 
   .grid-cols-maxi {
     --_edge: clamp(0.75rem, -1.4286rem + 10.8929vw, 16rem);
     grid-template-columns: 
       [full-start] var(--_edge) minmax(0, 1fr)  
-      [wide-start main-start] min(38rem, 100%) 
+      [wide-start main-start] min(40rem, 100%) 
       [main-end] clamp(0.75rem, -1.3125rem + 10.3125vw, 9rem) 
-      [side-start] minmax(0, 23rem) 
+      [side-start] minmax(0, 21rem) 
       [side-end wide-end] minmax(0, 1fr) var(--_edge) [full-end];
   }
   :where(.grid-cols-mini > *, .grid-cols-maxi > *) { grid-column: main }
