--- a/src/pages/omrade/omrade.njk
+++ b/src/pages/omrade/omrade.njk
@@ -1,36 +1,32 @@
 ---
-title: 'Områdeside'
+title: 'Helse og sykdom'
 description: ''
-order: 2
-activeRole: 'Arbeidsgiver'
-permalink: false
+alpine: true
 ---
 {%- extends 'base.njk' -%}
 
 {%- block content -%}
-  <main>
-    <div>
-      <div>
-        <h1>Helse og sykdom</h1>
-        {# {{ '/src/_includes/svg/area-illustrations/helse.svg' | svgContents() | safe }} #}
+  <main class="grid pt-12 pb-24 grid-cols-mini lg:grid-cols-maxi">
+    <div class="col-wide">
+      <div class="text-sm tracking-widest uppercase">{{ type | safe }}</div>
+        <h1 class="font-bold text-4xl/tight text-balance">{{ title | safe }}</h1>
+        <h2 class="mt-2 text-lg">Hva er situasjonen din?</h2>
       </div>
     </div>
-    <div>
-      <div>
-        <h2>Hva gjelder det</h2>
-        <ul>
-          {%- for item in situationList -%}
-            <li>
-              {# {{ item.icon | svgContents("self-center flex-none w-12 h-12 md:w-16 md:h-16") | safe if item.icon }} #}
-              <div>
-                <h3><a href="#">{{ item.title | safe }}</a></h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                <p>{{ item.category }}</p>
-              </div>
-            </li>
-          {%- endfor -%}
-        </ul>
-      </div>
+    <div class="mt-12 col-wide">
+      <ul class="grid gap-2 md:gap-4 md:grid-cols-2 text-pretty">
+        {%- for item in situationList -%}
+          <li class="relative flex flex-col">
+            <div class="flex flex-col justify-start flex-1 px-6 py-5 rounded-lg bg-slate-100">
+              <h3 class="font-bold text-lg/snug">
+                <a class="text-blue-600 underline hover:text-blue-500 hover:no-underline after:absolute after:inset-0" href="#">{{ item.title | safe }}</a>
+              </h3>
+              <p class="mt-2">{{ item.description | safe }}</p>
+              {# <p class="pt-8 mt-auto text-sm tracking-widest uppercase">{{ item.category }}</p> #}
+            </div>
+          </li>
+        {%- endfor -%}
+      </ul>
     </div>
 
   </main>
