--- a/src/pages/produkt/produkt-c.njk
+++ b/src/pages/produkt/produkt-c.njk
@@ -9,6 +9,7 @@ intro: 'Sikrer deg inntekt under fravær fra jobb når du må pleie og ta vare p
 published: 'Oppdatert 18. desember 2023'
 order: 4
 alpine: true
+permalink: 'produkt/c/index.html'
 ---
 {%- extends 'base.njk' -%}
 
@@ -35,7 +36,7 @@ alpine: true
     </div>
 
     {# Innholdsfortegnelse #}
-    <div class="mt-8 leading-normal col-wide">
+    <div class="mt-8 leading-normal lg:col-wide">
       <h2 class="text-base font-semibold">Innhold på siden</h2>
       <ul class="grid gap-2 mt-2 sm:grid-cols-2 lg:grid-cols-4 sm:-mx-6 lg:mx-0">
         {% for chapter in collections.kapittel.slice(0,4) %}
@@ -65,8 +66,8 @@ alpine: true
       {% set chapterIndex = loop.index %}
       <section class="grid items-start pt-24 col-full grid-cols-mini lg:grid-cols-maxi" id="{{ chapter.data.title | slugify }}"  x-data="{ tocOpen: false }">
 
-        <div class="col-wide">
-          <div class="grid items-end px-3 bg-slate-100 aspect-[3/1] rounded-xl sm:-mx-6 lg:mx-0">
+        <div class="lg:col-wide">
+          <div class="grid items-end px-4 bg-slate-100 aspect-[5/2] rounded-xl">
             <span class="text-[360px]/[0.8] inline-block translate-y-8 font-black text-white">
               {{ loop.index }}
             </span>
@@ -86,7 +87,7 @@ alpine: true
         {% endif %}
 
         {# Main Content #}
-        <div class="mt-8 prose col-main">
+        <div class="mt-2 prose col-main">
           <p>{{ chapter.data.description | safe }}</p>
 
           {{ chapter.templateContent | markdown | safe }}
