--- a/src/pages/produkt/produkt-b.njk
+++ b/src/pages/produkt/produkt-b.njk
@@ -26,7 +26,7 @@ permalink: 'produkt/b/index.html'
 
       {# Audience #}
       <div class="mt-6 -ml-1">
-        <span class="inline-block px-3 pt-1.5 pb-1 text-sm leading-none rounded-full bg-slate-200 ">
+        <span class="inline-block px-3 py-2 text-sm leading-none rounded-full bg-slate-200 ">
           {{ 'For ' if audience }}{{ audience | lower | safe }}
         </span>
       </div>
@@ -36,23 +36,17 @@ permalink: 'produkt/b/index.html'
     </div>
 
     {# Innholdsfortegnelse #}
-    <div class="mt-8">
+    <div class="z-10 mt-12 isolate">
       <h2 class="text-base font-semibold">Innhold på siden</h2>
-      <ul class="grid mt-2">
-        {% for chapter in collections.kapittel.slice(0,4) %}
-        <li class="relative grid items-center bg-slate-100 px-5 group hover:bg-blue-50 {{ 'rounded-t-xl pt-4 pb-2.5' if loop.first }} {{ 'rounded-b-xl pb-3 pt-2.5' if loop.last }} {{ 'py-2.5' if not (loop.first or loop.last) }}">
-          <a class="font-semibold underline text-base/snug group-hover:no-underline after:absolute after:inset-0" href="#{{ chapter.data.title | slugify }}">
+      <ul class="grid gap-6 mt-5">
+        {% for chapter in collections.kapittel %}
+        <li class="relative grid grid-cols-[auto_1fr_auto] items-baseline  gap-x-2 gap-y-1">
+          <a class="inline-block col-start-1 row-start-1 p-2 -m-2 font-semibold text-blue-600 underline text-base/snug hover:no-underline peer" href="#{{ chapter.data.title | slugify }}">
             {{ chapter.data.title }}
           </a>
-          <p class="text-pretty">{{ chapter.data.description | safe }}</p>
-        </li>
-        {% endfor %}
-
-        {% for chapter in collections.kapittel.slice(-1) %}
-        <li class="relative grid items-center px-5 py-3.5 mt-2.5 bg-slate-100 rounded-xl group hover:bg-blue-50">
-          <a class="font-semibold underline text-base/snug group-hover:no-underline after:absolute after:inset-0 " href="#{{ chapter.data.title | slugify }}">
-            {{ chapter.data.title }}
-          </a>
+          <span class="self-end h-px col-start-2 row-start-1 -translate-y-[0.375em] bg-dotted-x gap-y-1" aria-hidden="true"></span>
+          <span class="block w-8 col-start-3 text-center transition-colors duration-300 rounded-full peer-hover:bg-blue-500 peer-hover:text-white aspect-square bg-slate-100" aria-hidden="true">{{ loop.index }}</span>
+          <p class="col-start-1 col-end-3 pr-4 text-pretty opacity-85">{{ chapter.data.description | safe }}</p>
         </li>
         {% endfor %}
       </ul>
@@ -66,17 +60,14 @@ permalink: 'produkt/b/index.html'
       {% set chapterIndex = loop.index %}
       <section class="grid items-start pt-12 col-full grid-cols-mini lg:grid-cols-maxi" id="{{ chapter.data.title | slugify }}"  x-data="{ tocOpen: false }">
         <div class="col-wide">
-          <div class="text-[360px]/[0.8] -translate-x-2 font-black text-slate-200 pt-2xl">{{ loop.index }}</div>
+          <div class="text-[20em]/[0.8] -translate-x-2 font-black text-slate-200 pt-2xl">{{ loop.index }}</div>
           <h2 class="font-bold text-3xl/snug text-balance">{{ chapter.data.title }}</h2>
         </div>
 
         {# Chapter TOC #}
         {% if chapter.templateContent %}
-        <nav class="py-4 mt-4 rounded-lg lg:mt-8 lg:sticky lg:order-1 bg-slate-100 toc toc--sticky lg:col-side lg:top-6">
-          <h3 class="px-4 font-semibold">
-            I dette kapittelet
-            <span class="hidden lg:inline">({{ chapterIndex }})</span>
-          </h3>
+        <nav class="py-4 mt-2 lg:sticky lg:order-1 toc toc--b toc--sticky lg:col-side lg:top-6">
+          <h3 class="py-2 font-semibold">I dette kapittelet</h3>
           {{ chapter.templateContent | toc | safe }}
         </nav>
         {% endif %}
@@ -124,7 +115,7 @@ permalink: 'produkt/b/index.html'
 
     const intersectionOptions = {
       threshold: 1,
-      rootMargin: '0px 0px 0px 0px'
+      rootMargin: '-10% 0px -50% 0px'
     };
 
     const intersectionObserver = new IntersectionObserver(intersectionCallback, intersectionOptions);
