--- a/src/pages/produkt/produkt-b.njk
+++ b/src/pages/produkt/produkt-b.njk
@@ -45,7 +45,7 @@ permalink: 'produkt/b/index.html'
             {{ chapter.data.title }}
           </a>
           <span class="self-end h-px col-start-2 row-start-1 -translate-y-[0.375em] bg-dotted-x gap-y-1" aria-hidden="true"></span>
-          <span class="block w-8 col-start-3 text-center transition-colors duration-300 rounded-full peer-hover:bg-blue-500 peer-hover:text-white aspect-square bg-slate-100" aria-hidden="true">{{ loop.index }}</span>
+          <span class="grid w-8 col-start-3 leading-none text-center transition-colors duration-300 rounded-full place-items-center peer-hover:bg-blue-500 peer-hover:text-white aspect-square bg-slate-100" aria-hidden="true">{{ loop.index }}</span>
           <p class="col-start-1 col-end-3 pr-4 text-pretty opacity-85">{{ chapter.data.description | safe }}</p>
         </li>
         {% endfor %}
