--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -186,7 +186,7 @@
     display: grid;
     padding-inline: 40px;
     background-color: theme(colors.white);
-    border-radius: theme(borderRadius.md);
+    border-radius: theme(borderRadius.lg);
     border: 1px solid theme(colors.slate.300);
   }
   .expander[open] {
@@ -197,8 +197,7 @@
     display: flex;
     align-items: center;
     list-style: none;
-    padding: 0.75em 16px 0.75em 40px;
-    margin-block: -1px;
+    padding: 0.75em 12px 0.75em 40px;
     margin-inline: -40px;
     border-radius: theme(borderRadius.lg);
     cursor: pointer;
@@ -217,7 +216,7 @@
     margin-block-end: 20px;
   }
   :where(.expander) summary:hover {
-    background-color: theme(colors.slate.200/20);
+    background-color: theme(colors.slate.100);
   }
   :where(.expander) summary:before {
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none'%3E%3Cpath stroke='rgba(0, 69, 156, 1)' stroke-linecap='round' stroke-width='2' d='m6.5 10 5.493 5.493a.01.01 0 0 0 .014 0L17.5 10'/%3E%3C/svg%3E");
