--- a/src/_includes/partials/header.njk
+++ b/src/_includes/partials/header.njk
@@ -34,8 +34,9 @@
           x-on:click="languageDropdownOpen = !languageDropdownOpen" 
           aria-expanded="false">
           {{ '/src/_includes/svg/icons/globe.svg' | svgContents('flex-none w-5 h-5') | safe }}
-          <span>Språk/Language</span>
-          <span class="hidden xs:inline">({{ site.language[0].short }})</span>
+          <span>Språk/Language:</span>
+          <span class="sm:hidden" aria-hidden="true">{{ site.language[0].short }}</span>
+          <span class="hidden sm:inline">{{ site.language[0].full }}</span>
           {{ '/src/_includes/svg/icons/chevron-down.svg' | svgContents('w-5 h-5 ml-1.5 -translate-y-px') | safe }}
         </button>
         <ul class="absolute z-50 bg-white rounded -right-3 min-w-40 top-full" x-bind:class=" languageDropdownOpen ? 'grid shadow-lg' : 'hidden'">
@@ -97,11 +98,10 @@
           <span class="mt-px">Meny</span>
         </button>
 
-        {%- include "partials/navigation.njk" -%}
-      </div>
     </div>
-  </div>
+  </nav>
+  {%- include "partials/navigation.njk" -%}
 </header>
 
 {# Overlay #}
-<button class="fixed inset-0 z-40 w-full h-full opacity-0 cursor-default bg-slate-400/25 backdrop-blur-xs" x-bind:class="(menuOpen || notifyOpen || loginOpen) ? 'animate-fade-in' : 'hidden'" x-on:click="menuOpen = false, notifyOpen = false, loginOpen = false" x-on:keyup.escape.window="menuOpen = false, notifyOpen = false,  loginOpen = false"></button>
+<button class="fixed inset-0 z-40 w-full h-full opacity-0 cursor-default bg-slate-800/80 backdrop-blur-xs" x-bind:class="(menuOpen || notifyOpen || loginOpen) ? 'animate-fade-in' : 'hidden'" x-on:click="menuOpen = false, notifyOpen = false, loginOpen = false" x-on:keyup.escape.window="menuOpen = false, notifyOpen = false,  loginOpen = false"></button>
