--- a/src/_includes/partials/navigation.njk
+++ b/src/_includes/partials/navigation.njk
@@ -1,6 +1,6 @@
 {# Navigation (Private) #}
-<div class="absolute inset-x-0 z-40 w-full h-0 top-full" x-bind:class="!menuOpen ? 'hidden' : 'opacity-0 animate-dropdown'" x-bind:aria-hidden="!menuOpen">
-  <div class="pt-4 pb-12 bg-white px-edge">
+<div class="absolute z-40 w-full h-0 transition inset-x" x-bind:class="!menuOpen ? 'hidden' : 'opacity-0 animate-dropdown'" x-bind:aria-hidden="!menuOpen">
+  <div class="pt-8 pb-12 bg-white border-t border-slate-200 px-edge">
     <div class="grid gap-x-12 gap-y-12 mx-auto max-w-wide lg:grid-flow-col-dense lg:grid-cols-5 lg:grid-rows-[1fr_auto]">
 
       {# Områder #}
@@ -9,7 +9,7 @@
         <ul class="grid gap-3 mt-2 sm:grid-cols-2 lg:grid-cols-1">
           {%- for link in menu.areas.linkList -%}
             <li class="">
-              <a class="inline-flex items-center gap-2 pr-4 leading-normal text-blue-500 rounded group fine:hover:text-deepblue-600 fine:hover:underline" href="#">
+              <a class="inline-flex items-center gap-2 pr-4 leading-normal text-blue-500 rounded group fine:hover:text-blue-600 fine:hover:underline" href="#">
                 {%- if link.icon -%}
                   <span class="grid p-2 rounded-full bg-blue-50 place-items-center group-hover:bg-deepblue-600 group-hover:text-white">
                     {{ link.icon | svgContents('w-6 h-6') | safe }}
@@ -42,7 +42,7 @@
         <ul class="mt-1 sm:columns-2">
           {%- for link in menu.shortcuts.linkList -%}
             <li class="py-0.5">
-              <a class="inline-flex items-center gap-3 px-2 py-1 -mx-2 leading-normal text-blue-500 rounded fine:hover:text-blue-80 fine:hover:text-deepblue-500 fine:hover:underline" href="#">
+              <a class="inline-flex items-center gap-3 px-2 py-1 -mx-2 leading-normal text-blue-500 rounded fine:hover:text-blue-600 fine:hover:underline" href="#">
                 {%- if link.icon -%}
                   {{ link.icon | svgContents('w-6 h-6 opacity-80') | safe }}
                 {%- endif -%}
