--- a/src/pages/omrade/omrade.njk
+++ b/src/pages/omrade/omrade.njk
@@ -1,36 +1,41 @@
 ---
 title: 'Helse og sykdom'
 description: ''
+type: 'Område'
 alpine: true
 ---
 {%- extends 'base.njk' -%}
 
 {%- block content -%}
-  <main class="grid pt-12 pb-24 grid-cols-mini lg:grid-cols-maxi">
-    <div class="col-wide">
-      <div class="text-sm tracking-widest uppercase">{{ type | safe }}</div>
-        <h1 class="font-bold text-4xl/tight text-balance">{{ title | safe }}</h1>
-        <h2 class="mt-2 text-lg">Hva er situasjonen din?</h2>
+  <main class="bg-slate-100">
+    <div class="grid pt-12 bg-white grid-cols-mini lg:grid-cols-maxi">
+      <div class="relative col-wide">
+        {{ '/src/_includes/svg/area-illustrations/helse.svg' | svgContents('h-auto min-w-32 ml-auto w-1/3 xs:w-auto float-right xs:absolute xs:bottom-0 xs:right-0') | safe }}
+        <div class="text-sm tracking-widest uppercase">{{ type | safe }}</div>
+        <h1 class="mt-1 font-bold text-4xl/tight text-balance">{{ title | safe }}</h1>
+        <h2 class="col-span-2 col-start-1 mt-6 mb-8 text-lg xs:col-start-1 xs:col-span-1 max-w-prose">Hva er situasjonen din?</h2>
       </div>
     </div>
-    <div class="mt-12 col-wide">
-      <ul class="grid gap-2 md:gap-4 md:grid-cols-2 text-pretty">
-        {%- for item in situationList -%}
-          <li class="relative flex flex-col">
-            <div class="flex  flex-1 px-6 py-5 rounded-lg bg-slate-100 aspect-[5/2] gap-6">
-              <div class="flex-col justify-start">
-                <h3 class="text-lg font-bold leading-snug">
-                  <a class="text-blue-600 underline text-balance hover:text-blue-500 hover:no-underline after:absolute after:inset-0" href="#">{{ item.title | safe }}</a>
-                </h3>
-                <p>{{ item.description | safe }}</p>
-                <p class="pt-8 mt-auto text-sm tracking-widest uppercase text-balance">{{ item.category }}</p>
+    <div class="grid grid-flow-row-dense pt-12 pb-24 grid-cols-mini lg:grid-cols-maxi">
+      <div class="col-wide lg:col-side">[spesielle elementer]</div>
+      <div class="col-wide lg:col-main">
+        <ul class="grid divide-y divide-slate-300">
+          {%- for item in situationList -%}
+            <li class="relative flex flex-col">
+              <div class="flex items-center justify-between flex-1 py-8 gap-x-16">
+                <div class="flex-col justify-start">
+                  <h3 class="text-lg font-bold leading-snug">
+                    <a class="text-blue-600 underline text-balance hover:text-blue-500 hover:no-underline after:absolute after:inset-0" href="#">{{ item.title | safe }}</a>
+                  </h3>
+                  <p>{{ item.description | safe }}</p>
+                  {# <p class="pt-8 mt-auto text-sm tracking-widest uppercase text-balance">{{ item.category }}</p> #}
+                </div>
+                {{ item.icon | svgContents('shrink-0 w-16 aspect-square h-auto') | safe if item.icon }}
               </div>
-              {{ item.icon | svgContents('shrink-0 w-16 aspect-square') | safe if item.icon }}
-            </div>
-          </li>
-        {%- endfor -%}
-      </ul>
+            </li>
+          {%- endfor -%}
+        </ul>
+      </div>
     </div>
-
   </main>
 {%- endblock -%}
