--- a/src/pages/produkt/produkt-e.njk
+++ b/src/pages/produkt/produkt-e.njk
@@ -3,13 +3,13 @@ tags: ['produkt']
 title: 'Pleiepenger for sykt barn'
 // title: 'Tilskudd til kjøp av PC eller nettbrett ved lese- og skrivevansker'
 type: 'Pengestøtte'
-variant: 'B'
+variant: 'E'
 audience: 'Arbeidsgiver'
 intro: 'Sikrer deg inntekt under fravær fra jobb når du må pleie og ta vare på et barn som har vært innlagt eller er til behandling på sykehus.'
 published: 'Oppdatert 18. desember 2023'
 order: 4
 alpine: true
-permalink: 'produkt/b/index.html'
+permalink: 'produkt/e/index.html'
 ---
 {%- extends 'base.njk' -%}
 
@@ -36,15 +36,13 @@ permalink: 'produkt/b/index.html'
     {# Innholdsfortegnelse #}
     <div class="z-10 mt-12 isolate">
       <h2 class="text-base font-semibold">Innhold på siden</h2>
-      <ul class="grid gap-6 mt-5">
+      <ul class="grid gap-3 mt-2">
         {% for chapter in collections.kapittel.slice(0, -1) %}
         <li class="relative">
-          <a class="flex items-end gap-3 p-1 -m-1 font-semibold text-base/snug group" href="#{{ chapter.data.title | slugify }}">
-            <span class="text-blue-500 underline group-hover:no-underline group-hover:text-blue-700">{{ chapter.data.title }}</span>
-            <span class="flex-1 h-px min-w-4 -translate-y-[0.25em] bg-dotted-x" aria-hidden="true"></span>
-            <span class="grid w-[1.625em] col-start-3 leading-none text-center transition-colors duration-300 rounded-full place-items-center group-hover:bg-blue-500 group-hover:text-white aspect-square bg-slate-100" aria-hidden="true">{{ loop.index }}</span>
+          <span class="sm:absolute mr-1 sm:mr-2.5 leading-none sm:translate-y-1.5 right-full" aria-hidden="true">{{ loop.index }}.</span>
+          <a class="inline-flex items-end gap-3 p-1 -m-1 text-blue-500 underline hover:text-blue-700 text-base/snug hover:no-underline" href="#{{ chapter.data.title | slugify }}">
+            {{ chapter.data.title }}
           </a>
-          <p class="pr-4 mt-1.5 text-pretty opacity-85">{{ chapter.data.description | safe }}</p>
         </li>
         {% endfor %}
       </ul>
@@ -68,7 +66,7 @@ permalink: 'produkt/b/index.html'
         {% if chapter.templateContent %}
         <nav class="relative mb-8 lg:order-1 lg:col-side">
           <h3 class="absolute inset-x-0 top-0 z-20 py-2 font-semibold bg-white">I dette kapittelet</h3>
-          <div class="z-10 lg:sticky lg:top-6">
+          <div class="z-10 lg:sticky lg:top-3">
             <h3 class="py-2 font-semibold">{{ chapter.data.title }}</h3>
             <div class="pb-2 toc toc--b toc--sticky">
             {{ chapter.templateContent | toc | safe }}
@@ -142,7 +140,7 @@ permalink: 'produkt/b/index.html'
 
     const intersectionOptions = {
       threshold: 1,
-      rootMargin: '5% 0px -60% 0px'
+      rootMargin: '10% 0px -70% 0px'
     };
 
     const intersectionObserver = new IntersectionObserver(intersectionCallback, intersectionOptions);
