--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -26,18 +26,7 @@
     {%- block script -%}{%- endblock -%}
   </head>
   <body
-    id="toppen"
-    class="min-h-full text-base leading-relaxed overflow-x-hidden overflow-y-scroll {{ bodyClass }}"
-    x-data="{
-      indexOpen: false,
-      audienceDropdownOpen: false,
-      languageDropdownOpen: false,
-      loggedIn: true,
-      loginOpen: false,
-      menuOpen: false,
-      notifyOpen: false,
-      newNotifications: true
-    }">
+    id="toppen" class="min-h-full text-base leading-relaxed overflow-x-hidden overflow-y-scroll {{ bodyClass }}" x-data="{ indexOpen: false, audienceDropdownOpen: false, languageDropdownOpen: false, loggedIn: true, loginOpen: false, menuOpen: false, notifyOpen: false, newNotifications: true }">
     {%- if environment === 'production' -%}
     {%- include "partials/banner.njk" -%}
     {%- endif -%}
