--- a/src/_includes/partials/header.njk
+++ b/src/_includes/partials/header.njk
@@ -29,14 +29,14 @@
       <div class="relative" x-on:click.outside="languageDropdownOpen = false">
         <button 
           type="button" 
-          class="flex items-center gap-1 px-3 py-2 -mr-3 hover:bg-slate-300" 
+          class="flex items-center px-3 py-2 -mr-3 hover:bg-slate-300" 
           x-bind:class="languageDropdownOpen && 'bg-slate-300'"
           x-on:click="languageDropdownOpen = !languageDropdownOpen" 
           aria-expanded="false">
           {{ '/src/_includes/svg/icons/globe.svg' | svgContents('flex-none w-5 h-5') | safe }}
-          <span>Språk/Language:</span>
-          <span class="sm:hidden" aria-hidden="true">{{ site.language[0].short }}</span>
-          <span class="hidden sm:inline">{{ site.language[0].full }}</span>
+          <span>Språk/Language</span>
+          <span class="hidden xs:inline" aria-hidden="true">: {{ site.language[0].short }}</span>
+          <span class="hidden sm:inline">: {{ site.language[0].full }}</span>
           {{ '/src/_includes/svg/icons/chevron-down.svg' | svgContents('w-5 h-5 ml-1.5 -translate-y-px') | safe }}
         </button>
         <ul class="absolute z-50 bg-white rounded -right-3 min-w-40 top-full" x-bind:class=" languageDropdownOpen ? 'grid shadow-lg' : 'hidden'">
