--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -83,30 +83,21 @@
     @apply max-w-md grid gap-1.5;
   }
   .toc li {
-    @apply pt-1.5 pb-1 relative leading-snug;
-  }
-  .toc--sticky li {
-    @apply border-l-4 border-transparent px-3;
-  }
-  .toc--d li {
-    @apply -ml-3;
+    @apply border-l-4 -ml-4 border-transparent px-3 pt-1.5 pb-1 relative leading-snug;
   }
   .toc .active {
     @apply lg:border-blue-600;
   }
   .toc a {
-    @apply hover:underline;
+    @apply underline hover:no-underline text-blue-500 hover:text-blue-700;
   }
   .toc .active a {
-    @apply lg:no-underline;
+    @apply lg:no-underline text-slate-800;
   }
   .toc li a:before {
     content: "";
     position: absolute;
     inset: 0;
-  }
-  .toc--b ol {
-    @apply border-l border-slate-300;
   }
 
 
@@ -118,11 +109,9 @@
     display: grid;
     padding-inline: 36px 10px;
   }
-  .accordion:not(:first-of-type) {
-    border-top: 1px solid theme(colors.gray.200);
-  }
   .accordion + .accordion {
     margin-block-start: 0;
+    border-top: 1px solid theme(colors.gray.200);
   }
   .accordion[open] {
     padding-block-end: 36px;
