--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -173,7 +173,7 @@
   /* Expander */
   .expander {
     display: grid;
-    padding-inline: 40px;
+    padding-inline: 48px;
     background-color: theme(colors.white);
     border-radius: theme(borderRadius.lg);
     border: 1px solid theme(colors.slate.300);
@@ -186,8 +186,8 @@
     display: flex;
     align-items: center;
     list-style: none;
-    padding: 0.75em 12px 0.625em 40px;
-    margin-inline: -40px;
+    padding: 0.75em 12px 0.75em 48px;
+    margin-inline: -48px;
     border-radius: theme(borderRadius.lg);
     cursor: pointer;
     text-align: left;
@@ -207,7 +207,7 @@
   :where(.expander) summary:hover {
     background-color: theme(colors.slate.100);
   }
-  :where(.expander) summary:before {
+  :where(.expander) summary:after {
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none'%3E%3Cpath stroke='rgba(0, 69, 156, 1)' stroke-linecap='round' stroke-width='2' d='m6.5 10 5.493 5.493a.01.01 0 0 0 .014 0L17.5 10'/%3E%3C/svg%3E");
     background-position: center;
     background-repeat: no-repeat;
@@ -216,15 +216,14 @@
     flex-shrink: 0;
     place-items: center;
     align-self: baseline;
-    translate: 0 4px;
-    margin-inline: -27px 6px;
+    margin-inline: auto 4px;
     transition: rotate 150ms;
-    transform: translateY(1px);
+    transform: translateY(3px);
     width: 20px;
     height: 20px;
   }
-  :where(.expander[open]) summary:before {
-    transform: translateY(1px) rotate(-180deg);
+  :where(.expander[open]) summary:after {
+    transform: translateY(3px) rotate(-180deg);
   }
   :where(.expander) summary > * {
     text-wrap: pretty;
