--- a/src/pages/produkt/pleiepenger/pleiepenger-a.njk
+++ b/src/pages/produkt/pleiepenger/pleiepenger-a.njk
@@ -1,15 +1,7 @@
 ---
 tags: ['produkt']
-title: 'Pleiepenger for sykt barn'
-// title: 'Tilskudd til kjøp av PC eller nettbrett ved lese- og skrivevansker'
-type: 'Pengestøtte'
 variant: 'A'
-audience: 'Arbeidsgiver'
-intro: 'Sikrer deg inntekt under fravær fra jobb når du må pleie og ta vare på et barn som har vært innlagt eller er til behandling på sykehus.'
-published: 'Oppdatert 18. desember 2023'
-order: 4
-alpine: true
-permalink: 'produkt/a/index.html'
+permalink: 'produkt/pleiepenger/a/index.html'
 ---
 {%- extends 'base.njk' -%}
 
@@ -18,6 +10,8 @@ permalink: 'produkt/a/index.html'
 {%- from "macros/tile.njk" import tile -%}
 
 {%- block content -%}
+
+  {% set chapters = collections.all| onlyTags('pleiepenger', 'innhold') %}
 
   <main class="grid py-16 grid-cols-mini lg:grid-cols-maxi">
     <div class="col-main lg:col-wide">
@@ -37,7 +31,7 @@ permalink: 'produkt/a/index.html'
     <div class="mt-8">
       <h2 class="text-base font-semibold">Innhold på siden</h2>
       <ul class="grid mt-2">
-        {% for chapter in collections.kapittel.slice(0,4) %}
+        {% for chapter in chapters.slice(0,4) %}
         <li class="relative grid items-center bg-slate-100 px-5 group hover:bg-blue-50 {{ 'rounded-t-xl pt-4 pb-2.5' if loop.first }} {{ 'rounded-b-xl pb-4 pt-2.5' if loop.last }} {{ 'py-2.5' if not (loop.first or loop.last) }}">
           <a class="font-semibold underline text-base/snug group-hover:no-underline after:absolute after:inset-0" href="#{{ chapter.data.title | slugify }}">
             {{ chapter.data.title }}
@@ -46,7 +40,7 @@ permalink: 'produkt/a/index.html'
         </li>
         {% endfor %}
 
-        {% for chapter in collections.kapittel.slice(-1) %}
+        {% for chapter in chapters.slice(-1) %}
         <li class="relative grid items-center px-5 py-3.5 mt-2.5 bg-slate-100 rounded-xl group hover:bg-blue-50">
           <a class="font-semibold underline text-base/snug group-hover:no-underline after:absolute after:inset-0 " href="#{{ chapter.data.title | slugify }}">
             {{ chapter.data.title }}
@@ -58,8 +52,6 @@ permalink: 'produkt/a/index.html'
 
 
     {# Innhold #}
-    {% set chapters = collections.kapittel %}
-
     {% for chapter in chapters %}
       {% set chapterIndex = loop.index %}
       <section class="grid items-end pt-12 col-full grid-cols-mini lg:grid-cols-maxi" id="{{ chapter.data.title | slugify }}">
