--- a/src/pages/produkt/pleiepenger/pleiepenger-d.njk
+++ b/src/pages/produkt/pleiepenger/pleiepenger-d.njk
@@ -1,15 +1,7 @@
 ---
 tags: ['produkt']
-title: 'Pleiepenger for sykt barn'
-// title: 'Tilskudd til kjøp av PC eller nettbrett ved lese- og skrivevansker'
-type: 'Pengestøtte'
-variant: 'C'
-audience: 'Arbeidsgiver'
-intro: 'Sikrer deg inntekt under fravær fra jobb når du må pleie og ta vare på et barn som har vært innlagt eller er til behandling på sykehus.'
-published: 'Oppdatert 18. desember 2023'
-order: 4
-alpine: true
-permalink: 'produkt/c/index.html'
+variant: 'D'
+permalink: 'produkt/pleiepenger/d/index.html'
 ---
 {%- extends 'base.njk' -%}
 
@@ -19,25 +11,30 @@ permalink: 'produkt/c/index.html'
 
 {%- block content -%}
 
+  {% set chapters = collections.all| onlyTags('pleiepenger', 'innhold') %}
+
   <main class="grid py-16 grid-cols-mini lg:grid-cols-maxi">
-    <div class="col-main lg:col-wide">
+    <div class="col-wide">
       <div class="text-sm tracking-widest uppercase">{{ type | safe }}</div>
-      <h1 class="mt-1 font-bold text-4xl/tight text-balance">{{ title | safe }}</h1>
-      <div class="mt-8 text-lg text-pretty max-w-prose">{{ intro | markdown | safe }}</div>
+      <h1 class="mt-2 font-bold text-4xl/tight text-balance">{{ title | safe }}</h1>
 
       {# Audience #}
       <div class="mt-6 -ml-1">
-        <span class="inline-block px-3 py-2 text-sm leading-none rounded-full bg-slate-200 ">
+        <span class="inline-block px-3 pt-1.5 pb-1.5 text-sm leading-none rounded-full bg-slate-200 ">
           {{ 'For ' if audience }}{{ audience | lower | safe }}
         </span>
       </div>
+
+      {# Intro #}
+      <div class="mt-8 text-lg text-pretty max-w-prose">{{ intro | markdown | safe }}</div>
+
     </div>
 
     {# Innholdsfortegnelse #}
-    <div class="mt-8 leading-normal lg:col-wide">
-      <h2 class="text-base font-semibold">Innhold på siden</h2>
+    <div class="leading-normal col-wide">
+      <h2 class="mt-8 text-base font-semibold">Innhold på siden</h2>
       <ul class="grid gap-2 mt-2 sm:grid-cols-2 lg:grid-cols-4 sm:-mx-6 lg:mx-0">
-        {% for chapter in collections.kapittel.slice(0,4) %}
+        {% for chapter in chapters.slice(0,4) %}
         <li class="relative grid items-start content-start gap-1 px-6 py-5 rounded-lg lg:aspect-[4/5] bg-slate-100 group hover:bg-blue-50">
           <a class="font-semibold underline text-base/snug group-hover:no-underline after:absolute after:inset-0" href="#{{ chapter.data.title | slugify }}">
             {{ chapter.data.title }}
@@ -46,7 +43,7 @@ permalink: 'produkt/c/index.html'
         </li>
         {% endfor %}
 
-        {% for chapter in collections.kapittel.slice(-1) %}
+        {% for chapter in chapters.slice(-1) %}
         <li class="relative grid sm:col-span-2 lg:col-span-4 items-center px-5 mt-2 py-3.5 bg-slate-100 rounded-xl group hover:bg-blue-50">
           <a class="font-semibold underline text-base/snug group-hover:no-underline after:absolute after:inset-0 " href="#{{ chapter.data.title | slugify }}">
             {{ chapter.data.title }}
@@ -58,42 +55,60 @@ permalink: 'produkt/c/index.html'
 
 
     {# Innhold #}
-    {% set chapters = collections.kapittel %}
+    <div class="grid pt-24 col-full grid-cols-mini lg:grid-cols-maxi" x-data="{ showChapter1: false, showChapter2: false, showChapter3: false, showChapter4: false, showChapter5: false }">
+      <div class="col-main">
+        {% for chapter in chapters %}
+        {% set chapterIndex = loop.index %}
 
-    {% for chapter in chapters %}
-      {% set chapterIndex = loop.index %}
-      <section class="grid items-start pt-24 col-full grid-cols-mini lg:grid-cols-maxi" id="{{ chapter.data.title | slugify }}"  x-data="{ tocOpen: false }">
-
-        <div class="lg:col-wide">
-          <div class="grid items-end px-4 bg-slate-100 aspect-[5/2] rounded-xl">
+        <section 
+          id="{{ chapter.data.title | slugify }}"
+          class="mt-24" 
+          x-intersect:enter.margin.-10%.0px.-50%.0px="showChapter{{ chapterIndex }} = true"
+          x-intersect:leave.margin.-20%.0px.0%.0px="showChapter{{ chapterIndex }} = false" 
+        >
+          <div class="grid items-end px-3 bg-slate-100 aspect-[3/1] rounded-xl">
             <span class="text-[360px]/[0.8] inline-block translate-y-8 font-black text-white">
-              {{ loop.index }}
+              {{ chapterIndex }}
             </span>
           </div>
+
           <h2 class="mt-4 font-bold text-3xl/snug text-balance">{{ chapter.data.title }}</h2>
-        </div>
 
-        {# Chapter TOC #}
-        {% if chapter.templateContent %}
-        <nav class="py-4 mt-4 rounded-lg col-side lg:mt-8 lg:sticky lg:-translate-y-4 lg:order-1 bg-slate-100 toc toc--c toc--sticky lg:top-8">
-          <h3 class="px-4 font-semibold">
-            I dette kapittelet
-            <span class="hidden lg:inline">({{ chapterIndex }})</span>
-          </h3>
-          <div class="px-3">
+          {# Chapter TOC #}
+          {% if chapter.templateContent %}
+          <nav class="px-4 py-4 mt-4 rounded-lg lg:hidden toc bg-slate-100">
+            <h3 class="font-semibold">I dette kapittelet</h3>
             {{ chapter.templateContent | toc | safe }}
+          </nav>
+          {% endif %}
+
+          {# Main Content #}
+          <div class="mt-8 prose col-main">
+            <p>{{ chapter.data.description | safe }}</p>
+            {{ chapter.templateContent | markdown | safe }}
           </div>
-        </nav>
-        {% endif %}
+        </section>
+        {% endfor %}
+      </div>
 
-        {# Main Content #}
-        <div class="mt-2 prose col-main">
-          <p>{{ chapter.data.description | safe }}</p>
-
-          {{ chapter.templateContent | markdown | safe }}
+      {# Chapter TOC #}
+      <nav class="hidden col-side lg:block">
+        <div class="toc toc--d toc--sticky lg:mt-[500px] lg:sticky lg:-translate-y-4 lg:top-8">
+        {% for chapter in chapters %}
+        <h3 class="py-1 font-semibold">
+          <a href="#{{ chapter.data.title | slugify }}">{{ loop.index }}. {{ chapter.data.title }}</a>
+        </h3>
+          
+        {% if chapter.templateContent %}
+        <div class="pl-3 mb-3 border-l border-slate-300" x-show="showChapter{{ loop.index }}">
+          {{ chapter.templateContent | toc | safe }}
         </div>
-      </section>
-    {% endfor %}
+        {% endif %}
+        {% endfor %}
+        </div>
+      </nav>
+
+    </div>
 
     <div class="pt-2 mt-12 text-sm italic border-t border-slate-200 col-wide">{{ published | safe }}</div>
   </main>
@@ -129,7 +144,7 @@ permalink: 'produkt/c/index.html'
 
     const intersectionOptions = {
       threshold: 1,
-      rootMargin: '15% 0px -70% 0px'
+      rootMargin: '15% 0px -60% 0px'
     };
 
     const intersectionObserver = new IntersectionObserver(intersectionCallback, intersectionOptions);
