--- a/src/pages/produkt/pleiepenger/pleiepenger-e.njk
+++ b/src/pages/produkt/pleiepenger/pleiepenger-e.njk
@@ -1,15 +1,7 @@
 ---
 tags: ['produkt']
-title: 'Pleiepenger for sykt barn'
-// title: 'Tilskudd til kjøp av PC eller nettbrett ved lese- og skrivevansker'
-type: 'Pengestøtte'
 variant: 'E'
-audience: 'Arbeidsgiver'
-intro: 'Sikrer deg inntekt under fravær fra jobb når du må pleie og ta vare på et barn som har vært innlagt eller er til behandling på sykehus.'
-published: 'Oppdatert 18. desember 2023'
-order: 4
-alpine: true
-permalink: 'produkt/e/index.html'
+permalink: 'produkt/pleiepenger/e/index.html'
 ---
 {%- extends 'base.njk' -%}
 
@@ -18,6 +10,8 @@ permalink: 'produkt/e/index.html'
 {%- from "macros/tile.njk" import tile -%}
 
 {%- block content -%}
+
+  {% set chapters = collections.all| onlyTags('pleiepenger', 'innhold') %}
 
   <main class="grid py-16 grid-cols-mini lg:grid-cols-maxi">
     <div class="col-main lg:col-wide">
@@ -37,7 +31,7 @@ permalink: 'produkt/e/index.html'
     <div class="z-10 mt-12 isolate">
       <h2 class="text-base font-semibold">Innhold på siden</h2>
       <ul class="grid gap-3 mt-2">
-        {% for chapter in collections.kapittel.slice(0, -1) %}
+        {% for chapter in chapters.slice(0, -1) %}
         <li class="relative">
           <span class="sm:absolute mr-1 sm:mr-2.5 leading-none sm:translate-y-1.5 right-full" aria-hidden="true">{{ loop.index }}.</span>
           <a class="inline-flex items-end gap-3 p-1 -m-1 text-blue-500 underline hover:text-blue-700 text-base/snug hover:no-underline" href="#{{ chapter.data.title | slugify }}">
@@ -50,7 +44,6 @@ permalink: 'produkt/e/index.html'
 
 
     {# Innhold #}
-    {% set chapters = collections.kapittel %}
 
     {% for chapter in chapters %}
       {% set chapterIndex = loop.index %}
