--- a/src/_includes/partials/navigation.njk
+++ b/src/_includes/partials/navigation.njk
@@ -1,5 +1,15 @@
 {# Navigation (Private) #}
 <div class="absolute z-40 w-full h-0 transition inset-x" x-bind:class="!menuOpen ? 'hidden' : 'opacity-0 animate-dropdown'" x-bind:aria-hidden="!menuOpen">
+
+  {# Rollebytte #}
+  <div class="py-3 px-edge bg-slate-200">
+    <div class="grid content-center -mx-1 xs:gap-1 sm:gap-3 xs:text-center xs:-mx-5 sm:mx-0 xs:justify-center xs:grid-flow-col max-w-wide">
+    {% for role in audience %}
+      <a href="#" class="block py-1 px-5 rounded-full {{ 'bg-blue-500 text-white' if activeRole === role.title }}">{{ role.title }}</a>
+    {% endfor %}
+    </div>
+  </div>
+
   <div class="pt-8 pb-12 bg-white border-t border-slate-200 px-edge">
     <div class="grid gap-x-12 gap-y-12 mx-auto max-w-wide lg:grid-flow-col-dense lg:grid-cols-5 lg:grid-rows-[1fr_auto]">
 
