--- a/src/pages/omrade/omrade.njk
+++ b/src/pages/omrade/omrade.njk
@@ -12,7 +12,7 @@ alpine: true
       <div class="relative col-wide">
         {{ '/src/_includes/svg/area-illustrations/helse.svg' | svgContents('h-auto min-w-32 ml-auto w-1/3 xs:w-auto float-right xs:absolute xs:bottom-0 xs:right-0') | safe }}
         <div class="text-sm tracking-widest uppercase">{{ type | safe }}</div>
-        <h1 class="mt-1 font-bold text-4xl/tight text-balance">{{ title | safe }}</h1>
+        <h1 class="mt-0.5 -translate-x-[0.0625em] font-bold text-4xl/tight text-balance">{{ title | safe }}</h1>
         <h2 class="col-span-2 col-start-1 mt-6 mb-8 text-lg xs:col-start-1 xs:col-span-1 max-w-prose">Hva er situasjonen din?</h2>
       </div>
     </div>
