--- a/src/pages/produkt/alderspensjon/alderspensjon.njk
+++ b/src/pages/produkt/alderspensjon/alderspensjon.njk
@@ -30,18 +30,18 @@ permalink: 'produkt/alderspensjon/index.html'
     </div>
 
     {# Innholdsfortegnelse #}
-    <div class="z-10 mt-12 isolate">
+    <div class="z-10 mt-8 isolate">
       <h2 class="text-base font-semibold">Innhold på siden</h2>
-      <ul class="grid gap-3 mt-2">
+      <ol class="grid gap-3 mt-2">
         {% for chapter in chapters.slice(0, -1) %}
         <li class="relative">
-          <span class="sm:absolute mr-1 sm:mr-2.5 leading-none sm:translate-y-1.5 right-full" aria-hidden="true">{{ loop.index }}</span>
+          <span class="mr-1 leading-none" aria-hidden="true">{{ loop.index }}.</span>
           <a class="inline-flex items-end gap-3 p-1 -m-1 text-blue-500 underline hover:text-blue-700 text-base/snug hover:no-underline" href="#{{ chapter.data.title | slugify }}">
             {{ chapter.data.title }}
           </a>
         </li>
         {% endfor %}
-      </ul>
+      </ol>
     </div>
 
 
@@ -54,18 +54,19 @@ permalink: 'produkt/alderspensjon/index.html'
             <span class="font-black -mb-9 text-white text-[20em]/[0.8]">{{ loop.index }}</span>
           </div>
           <h2 class="mt-8 font-bold text-3xl/snug text-balance">{{ chapter.data.title }}</h2>
+          <p>{{ chapter.data.description | safe }}</p>
         </div>
 
         {# Chapter TOC #}
         {% if chapter.templateContent and chapter.templateContent | toc | length > 0%}
-        <nav class="relative mb-8 lg:order-1 lg:col-side">
+        <nav class="relative mt-8 mb-8 lg:order-1 lg:col-side">
           <h3 class="absolute inset-x-0 top-0 z-20 py-2 font-semibold bg-white">I dette kapittelet</h3>
           <div class="z-10 lg:sticky lg:top-2">
-            <h3 class="py-2 font-semibold">{{ chapter.data.title }}</h3>
-            <div class="pb-2 toc toc--b toc--sticky">
+            <h3 class="py-1 font-semibold">{{ chapter.data.title }}</h3>
+            <div class="pb-3 toc toc--b toc--sticky">
             {{ chapter.templateContent | toc | safe }}
             </div>
-            <div class="relative" x-data="{ dropdownOpen: false }">
+            <div class="relative border-t border-slate-200" x-data="{ dropdownOpen: false }">
               <button class="flex items-center gap-1 px-4 py-3 -mx-4 font-semibold text-blue-500 hover:text-blue-600 group" x-on:click="dropdownOpen = !dropdownOpen" type="button" x-bind:aria-expanded="dropdownOpen">
                 <span>Bytt kapittel</span>
                 {{ '/src/_includes/svg/icons/chevron-down.svg' | svgContents('w-5 h-5 -translate-x-1 group-aria-expanded:rotate-180') | safe }}
@@ -89,15 +90,10 @@ permalink: 'produkt/alderspensjon/index.html'
             </div>
           </div>
         </nav>
-        {% else %}
-        <div class="lg:col-side lg:order-1">
-          <p class="px-3 py-2 font-semibold text-red-500 rounded-sm lg:sticky lg:top-2">[ Ingen H3 i kapittelet ]</p>
-        </div>
-        {% endif %}
+      {% endif %}
 
         {# Main Content #}
-        <div class="mt-2 prose col-main">
-          <p>{{ chapter.data.description | safe }}</p>
+        <div class="mt-2 prose lg:mt-8 col-main">
 
           {{ chapter.templateContent | markdown | safe }}
         </div>
