--- a/src/pages/produkt/sykepenger/sykepenger.njk
+++ b/src/pages/produkt/sykepenger/sykepenger.njk
@@ -1,5 +1,6 @@
 ---
 tags: ['produkt']
+// title: 'Søknad om refusjon av reiseutgifter knyttet til ortopediske hjelpemidler, parykk, tilpasningskurs, folkehøyskole, grunnmønster eller brystprotese'
 permalink: 'produkt/sykepenger/index.html'
 ---
 {%- extends 'base.njk' -%}
@@ -54,18 +55,19 @@ permalink: 'produkt/sykepenger/index.html'
             <span class="font-black -mb-9 text-white text-[20em]/[0.8]">{{ loop.index }}</span>
           </div>
           <h2 class="mt-8 font-bold text-3xl/snug text-balance">{{ chapter.data.title }}</h2>
+          <p>{{ chapter.data.description | safe }}</p>
         </div>
 
         {# Chapter TOC #}
         {% if chapter.templateContent and chapter.templateContent | toc | length > 0%}
-        <nav class="relative mb-8 lg:order-1 lg:col-side">
+        <nav class="relative mt-8 mb-8 lg:order-1 lg:col-side">
           <h3 class="absolute inset-x-0 top-0 z-20 py-2 font-semibold bg-white">I dette kapittelet</h3>
           <div class="z-10 lg:sticky lg:top-2">
-            <h3 class="py-2 font-semibold">{{ chapter.data.title }}</h3>
-            <div class="pb-2 toc toc--b toc--sticky">
+            <h3 class="py-1 font-semibold">{{ chapter.data.title }}</h3>
+            <div class="pb-3 toc toc--b toc--sticky">
             {{ chapter.templateContent | toc | safe }}
             </div>
-            <div class="relative" x-data="{ dropdownOpen: false }">
+            <div class="relative border-t border-slate-200" x-data="{ dropdownOpen: false }">
               <button class="flex items-center gap-1 px-4 py-3 -mx-4 font-semibold text-blue-500 hover:text-blue-600 group" x-on:click="dropdownOpen = !dropdownOpen" type="button" x-bind:aria-expanded="dropdownOpen">
                 <span>Bytt kapittel</span>
                 {{ '/src/_includes/svg/icons/chevron-down.svg' | svgContents('w-5 h-5 -translate-x-1 group-aria-expanded:rotate-180') | safe }}
@@ -89,16 +91,10 @@ permalink: 'produkt/sykepenger/index.html'
             </div>
           </div>
         </nav>
-        {% else %}
-        <div class="lg:col-side lg:order-1">
-          <p class="px-3 py-2 font-semibold text-red-500 rounded-sm lg:sticky lg:top-2">[ Ingen H3 i kapittelet ]</p>
-        </div>
         {% endif %}
 
         {# Main Content #}
         <div class="mt-2 prose col-main">
-          <p>{{ chapter.data.description | safe }}</p>
-
           {{ chapter.templateContent | markdown | safe }}
         </div>
       </section>
